--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Santiago's CV</title>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4H3K77GCV7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4H3K77GCV7');
+</script>
 </head>
 
 <body>
